#1725: Converted Command Security and Field Definitions to use List.of(...)