@@ -31,8 +31,6 @@ import com.echothree.util.common.validation.FieldType;
 import com.echothree.util.server.control.BaseSimpleCommand;
 import com.echothree.util.server.persistence.Session;
 import com.echothree.util.server.string.PasswordGeneratorUtils;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import javax.enterprise.context.Dependent;
 
@@ -43,11 +41,11 @@ public class RecoverPasswordCommand
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
 
     static {
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
+        FORM_FIELD_DEFINITIONS = List.of(
                 new FieldDefinition("PartyName", FieldType.ENTITY_NAME, false, null, null),
                 new FieldDefinition("Username", FieldType.STRING, false, 1L, 80L),
                 new FieldDefinition("Answer", FieldType.STRING, false, 1L, 40L)
-                ));
+                );
     }
 
     /** Creates a new instance of RecoverPasswordCommand */
