@@ -38,8 +38,6 @@ import com.echothree.util.server.control.PartyTypeDefinition;
 import com.echothree.util.server.control.SecurityRoleDefinition;
 import com.echothree.util.server.persistence.Session;
 import com.echothree.util.server.validation.Validator;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import javax.enterprise.context.Dependent;
 
@@ -52,14 +50,14 @@ public class CreateItemDescriptionTypeCommand
     private final static List<FieldDefinition> imageFieldDefinitions;
     
     static {
-        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(Collections.unmodifiableList(Arrays.asList(
+        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(List.of(
                 new PartyTypeDefinition(PartyTypes.UTILITY.name(), null),
-                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), Collections.unmodifiableList(Arrays.asList(
+                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), List.of(
                         new SecurityRoleDefinition(SecurityRoleGroups.ItemDescriptionType.name(), SecurityRoles.Create.name())
-                        )))
-                )));
+                        ))
+                ));
         
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
+        FORM_FIELD_DEFINITIONS = List.of(
                 new FieldDefinition("ItemDescriptionTypeName", FieldType.ENTITY_NAME, true, null, null),
                 new FieldDefinition("ParentItemDescriptionTypeName", FieldType.ENTITY_NAME, false, null, null),
                 new FieldDefinition("UseParentIfMissing", FieldType.BOOLEAN, true, null, null),
@@ -70,9 +68,9 @@ public class CreateItemDescriptionTypeCommand
                 new FieldDefinition("IsDefault", FieldType.BOOLEAN, true, null, null),
                 new FieldDefinition("SortOrder", FieldType.SIGNED_INTEGER, true, null, null),
                 new FieldDefinition("Description", FieldType.STRING, false, 1L, 132L)
-                ));
+                );
 
-        imageFieldDefinitions = Collections.unmodifiableList(Arrays.asList(
+        imageFieldDefinitions = List.of(
                 new FieldDefinition("MinimumHeight", FieldType.UNSIGNED_INTEGER, false, null, null),
                 new FieldDefinition("MinimumWidth", FieldType.UNSIGNED_INTEGER, false, null, null),
                 new FieldDefinition("MaximumHeight", FieldType.UNSIGNED_INTEGER, false, null, null),
@@ -82,7 +80,7 @@ public class CreateItemDescriptionTypeCommand
                 new FieldDefinition("PreferredMimeTypeName", FieldType.MIME_TYPE, false, null, null),
                 new FieldDefinition("Quality", FieldType.UNSIGNED_INTEGER, false, null, 100L),
                 new FieldDefinition("ScaleFromParent", FieldType.BOOLEAN, true, null, null)
-                ));
+                );
     }
     
     /** Creates a new instance of CreateItemDescriptionTypeCommand */
