@@ -18,22 +18,18 @@ package com.echothree.control.user.party.server.command;
 
 import com.echothree.control.user.party.common.edit.MoodEdit;
 import com.echothree.control.user.party.common.edit.PartyEditFactory;
-import com.echothree.control.user.party.common.form.EditMoodForm;
 import com.echothree.control.user.party.common.result.PartyResultFactory;
 import com.echothree.control.user.party.common.spec.MoodSpec;
 import com.echothree.model.control.icon.common.IconConstants;
 import com.echothree.model.control.icon.server.control.IconControl;
 import com.echothree.model.control.party.server.control.PartyControl;
-import com.echothree.model.data.user.common.pk.UserVisitPK;
+import com.echothree.util.common.command.BaseResult;
+import com.echothree.util.common.command.EditMode;
 import com.echothree.util.common.message.ExecutionErrors;
 import com.echothree.util.common.validation.FieldDefinition;
 import com.echothree.util.common.validation.FieldType;
-import com.echothree.util.common.command.BaseResult;
-import com.echothree.util.common.command.EditMode;
 import com.echothree.util.server.control.BaseEditCommand;
 import com.echothree.util.server.persistence.Session;
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import javax.enterprise.context.Dependent;
 
@@ -45,17 +41,17 @@ public class EditMoodCommand
     private final static List<FieldDefinition> EDIT_FIELD_DEFINITIONS;
     
     static {
-        List<FieldDefinition> temp = new ArrayList<>(1);
-        temp.add(new FieldDefinition("MoodName", FieldType.ENTITY_NAME, true, null, null));
-        SPEC_FIELD_DEFINITIONS = Collections.unmodifiableList(temp);
+        SPEC_FIELD_DEFINITIONS = List.of(
+                new FieldDefinition("MoodName", FieldType.ENTITY_NAME, true, null, null)
+        );
         
-        temp = new ArrayList<>(4);
-        temp.add(new FieldDefinition("MoodName", FieldType.ENTITY_NAME, true, null, null));
-        temp.add(new FieldDefinition("IconName", FieldType.ENTITY_NAME, false, null, null));
-        temp.add(new FieldDefinition("IsDefault", FieldType.BOOLEAN, true, null, null));
-        temp.add(new FieldDefinition("SortOrder", FieldType.SIGNED_INTEGER, true, null, null));
-        temp.add(new FieldDefinition("Description", FieldType.STRING, false, 1L, 132L));
-        EDIT_FIELD_DEFINITIONS = Collections.unmodifiableList(temp);
+        EDIT_FIELD_DEFINITIONS = List.of(
+                new FieldDefinition("MoodName", FieldType.ENTITY_NAME, true, null, null),
+                new FieldDefinition("IconName", FieldType.ENTITY_NAME, false, null, null),
+                new FieldDefinition("IsDefault", FieldType.BOOLEAN, true, null, null),
+                new FieldDefinition("SortOrder", FieldType.SIGNED_INTEGER, true, null, null),
+                new FieldDefinition("Description", FieldType.STRING, false, 1L, 132L)
+        );
     }
     
     /** Creates a new instance of EditMoodCommand */
