@@ -44,8 +44,6 @@ import com.echothree.util.server.control.PartyTypeDefinition;
 import com.echothree.util.server.control.SecurityRoleDefinition;
 import com.echothree.util.server.persistence.Session;
 import com.echothree.util.server.validation.Validator;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import javax.enterprise.context.Dependent;
 
@@ -60,31 +58,31 @@ public class EditPaymentMethodCommand
     private final static List<FieldDefinition> editCreditCardFieldDefinitions;
     
     static {
-        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(Collections.unmodifiableList(Arrays.asList(
+        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(List.of(
                 new PartyTypeDefinition(PartyTypes.UTILITY.name(), null),
-                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), Collections.unmodifiableList(Arrays.asList(
+                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), List.of(
                     new SecurityRoleDefinition(SecurityRoleGroups.PaymentMethod.name(), SecurityRoles.Edit.name())
-                    )))
-                )));
-
-        SPEC_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
-                new FieldDefinition("PaymentMethodName", FieldType.ENTITY_NAME, true, null, null)
+                    ))
                 ));
+
+        SPEC_FIELD_DEFINITIONS = List.of(
+                new FieldDefinition("PaymentMethodName", FieldType.ENTITY_NAME, true, null, null)
+                );
         
-        EDIT_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
+        EDIT_FIELD_DEFINITIONS = List.of(
                 new FieldDefinition("PaymentMethodName", FieldType.ENTITY_NAME, true, null, null),
                 new FieldDefinition("ItemSelectorName", FieldType.ENTITY_NAME, false, null, null),
                 new FieldDefinition("SalesOrderItemSelectorName", FieldType.ENTITY_NAME, false, null, null),
                 new FieldDefinition("IsDefault", FieldType.BOOLEAN, true, null, null),
                 new FieldDefinition("SortOrder", FieldType.SIGNED_INTEGER, true, null, null),
                 new FieldDefinition("Description", FieldType.STRING, false, 1L, 132L)
-                ));
+                );
         
-        editCheckFieldDefinitions = Collections.unmodifiableList(Arrays.asList(
+        editCheckFieldDefinitions = List.of(
                 new FieldDefinition("HoldDays", FieldType.UNSIGNED_INTEGER, true, null, null)
-                ));
+                );
         
-        editCreditCardFieldDefinitions = Collections.unmodifiableList(Arrays.asList(
+        editCreditCardFieldDefinitions = List.of(
                 new FieldDefinition("RequestNameOnCard", FieldType.BOOLEAN, true, null, null),
                 new FieldDefinition("RequireNameOnCard", FieldType.BOOLEAN, true, null, null),
                 new FieldDefinition("CheckCardNumber", FieldType.BOOLEAN, true, null, null),
@@ -101,7 +99,7 @@ public class EditPaymentMethodCommand
                 new FieldDefinition("RequireBilling", FieldType.BOOLEAN, true, null, null),
                 new FieldDefinition("RequestIssuer", FieldType.BOOLEAN, true, null, null),
                 new FieldDefinition("RequireIssuer", FieldType.BOOLEAN, true, null, null)
-                ));
+                );
     }
     
     /** Creates a new instance of EditPaymentMethodCommand */
