@@ -28,8 +28,7 @@ import com.echothree.util.common.command.BaseResult;
 import com.echothree.util.server.control.CommandSecurityDefinition;
 import com.echothree.util.server.control.PartyTypeDefinition;
 import com.echothree.util.server.control.SecurityRoleDefinition;
-import java.util.Arrays;
-import java.util.Collections;
+import java.util.List;
 import javax.enterprise.context.Dependent;
 
 @Dependent
@@ -39,12 +38,12 @@ public class CountEmployeeResultsCommand
     private final static CommandSecurityDefinition COMMAND_SECURITY_DEFINITION;
 
     static {
-        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(Collections.unmodifiableList(Arrays.asList(
+        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(List.of(
                 new PartyTypeDefinition(PartyTypes.UTILITY.name(), null),
-                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), Collections.unmodifiableList(Arrays.asList(
+                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), List.of(
                         new SecurityRoleDefinition(SecurityRoleGroups.Employee.name(), SecurityRoles.Search.name())
-                        )))
-                )));
+                ))
+        ));
     }
 
     /** Creates a new instance of CountEmployeeResultsCommand */
