@@ -31,8 +31,6 @@ import com.echothree.util.common.validation.FieldType;
 import com.echothree.util.common.command.BaseResult;
 import com.echothree.util.server.control.BaseSimpleCommand;
 import com.echothree.util.server.persistence.Session;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import javax.enterprise.context.Dependent;
 
@@ -43,13 +41,13 @@ public class CreateSubscriptionCommand
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
     
     static {
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
+        FORM_FIELD_DEFINITIONS = List.of(
             new FieldDefinition("SubscriptionKindName", FieldType.ENTITY_NAME, true, null, null),
             new FieldDefinition("SubscriptionTypeName", FieldType.ENTITY_NAME, true, null, null),
             new FieldDefinition("PartyName", FieldType.ENTITY_NAME, true, null, null),
             new FieldDefinition("UnitOfMeasureTypeName", FieldType.ENTITY_NAME, false, null, null),
             new FieldDefinition("SubscriptionTime", FieldType.UNSIGNED_LONG, false, null, null)
-        ));
+        );
     }
     
     /** Creates a new instance of CreateSubscriptionCommand */
