@@ -23,8 +23,6 @@ import com.echothree.util.common.validation.FieldDefinition;
 import com.echothree.util.common.validation.FieldType;
 import com.echothree.util.common.command.BaseResult;
 import com.echothree.util.server.control.BaseSimpleCommand;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import javax.enterprise.context.Dependent;
 
@@ -35,10 +33,10 @@ public class GetRecoveryQuestionChoicesCommand
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
     
     static {
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
+        FORM_FIELD_DEFINITIONS = List.of(
             new FieldDefinition("DefaultRecoveryQuestionChoice", FieldType.ENTITY_NAME, false, null, null),
             new FieldDefinition("AllowNullChoice", FieldType.BOOLEAN, true, null, null)
-        ));
+        );
     }
     
     /** Creates a new instance of GetRecoveryQuestionChoicesCommand */
