@@ -28,8 +28,6 @@ import com.echothree.util.common.validation.FieldDefinition;
 import com.echothree.util.common.validation.FieldType;
 import com.echothree.util.server.control.BaseSingleEntityCommand;
 import com.echothree.util.server.persistence.Session;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import javax.enterprise.context.Dependent;
 
@@ -41,12 +39,12 @@ public class GetWishlistPriorityCommand
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
     
     static {
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
+        FORM_FIELD_DEFINITIONS = List.of(
             new FieldDefinition("WishlistTypeName", FieldType.ENTITY_NAME, false, null, null),
             new FieldDefinition("WishlistPriorityName", FieldType.ENTITY_NAME, false, null, null),
             new FieldDefinition("EntityRef", FieldType.ENTITY_REF, false, null, null),
             new FieldDefinition("Uuid", FieldType.UUID, false, null, null)
-        ));
+        );
     }
     
     /** Creates a new instance of GetWishlistPriorityCommand */
